--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,72 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <meta charset="utf-8">
-    
-    <title>{{ page.title }} &#124; maps.robertomurray.co.uk</title>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="{{ page.description }}">
     <meta name="author" content="robertomurray.co.uk">
 
-    <link href="/assets/stylesheets/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link href="/assets/stylesheets/bootstrap-responsive.css" rel="stylesheet">
+    <title>{{ page.title }} &#124; maps.robertomurray.co.uk</title>
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="/assets/stylesheets/site.css" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- {% project_version %} -->
   </head>
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Map projects</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-            </ul>
-            
-            <div id="share-bar-container" class="pull-right">
-              
-              <ul class="nav">
-                
-<li><a class="addthis_button_facebook_like" fb:like:layout="button_count"></a></li>
-<li><a class="addthis_button_tweet"></a></li>
-<li><a class="addthis_button_pinterest_pinit"></a></li>
-<li><a class="addthis_counter addthis_pill_style"></a></li>
-                
-              </ul>
-  
-            </div>
-          </div><!--/.nav-collapse -->
+          </button>
+          <a class="navbar-brand" href="/">Map projects</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
 
-{{ content }}
-    
-    <!-- global javascript -->
-    <script type="text/javascript" src="/assets/javascripts/site.js"></script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-50708e460904d8c8"></script>
 
-    
+{{ content }}
+
+
+    <!-- Core JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="/assets/javascripts/site.js"></script>
+    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-50708e460904d8c8"></script>
+
 {% if site.prod %}
     {% include google_analytics.html %}
 {% endif %}
