Add sharing bar back in

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -39,6 +39,18 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
           </ul>
+          <div id="share-bar-container" class="pull-right">
+
+            <ul class="nav navbar-nav">
+
+<li><a class="addthis_button_facebook_like" fb:like:layout="button_count"></a></li>
+<li><a class="addthis_button_tweet"></a></li>
+<li><a class="addthis_button_pinterest_pinit"></a></li>
+<li><a class="addthis_counter addthis_pill_style"></a></li>
+
+            </ul>
+
+          </div><!-- /#share-bar-container -->
         </div><!--/.nav-collapse -->
       </div>
     </div>
